--- a/src/styles/sections/hero.css
+++ b/src/styles/sections/hero.css
@@ -3,7 +3,6 @@
   flex-direction: row;
   max-width: 100%;
   margin: auto;
-  border: 2px solid purple;
 }
 
 .hero-left {
